<resources>
    <string name="app_name">Step</string>
    <string name="telephoneHint">11位手机号码</string>
    <string name="passwordHint">6-20位密码</string>
    <string name="verificationCode">验证码</string>
    <string name="Button_getCode_text">点击获取</string>
    <string name="button_submit_text">提交</string>
    <string name="update_date_hint">正在提交请稍后...</string>
    <string name="start_run">开始跑步</string>
    <string name="pause_run">暂停运动</string>
    <string name="start_running">开始运动</string>
    <string name="stop_running">结束运动</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sm_item_auth">ShareSDK授权demo</string>
    <string name="not_yet_authorized">尚未授权</string>
    <string name="close_info_dialog">关闭信息界面</string>
    <string name="login_to_format">登陆到%s</string>
    <string name="remove_to_format">注销%s登录</string>
    <string name="remove_to_format_success">成功移除%s登录信息</string>

    <string name="register_key_user_icon">头像:</string>
    <string name="register_key_user_name">昵称:</string>
    <string name="register_key_user_gender">性别:</string>
    <string name="register_key_user_UID">U I D:</string>
    <string name="register_key_user_mail">邮箱:</string>
    <string name="register_key_user_password">密码:</string>

    <string name="register_user_info">用户信息</string>
    <string name="register_up">注册</string>
    <string name="register_girl">女</string>
    <string name="register_boy">男</string>
    <string name="register_UserID">UserID不能修改</string>
    <string name="tpl_no_sdcard">sdcard 卡不存在</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>

    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
</resources>
