<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.henu.step.RegisterActivity"
    android:background="@mipmap/b1"
    android:weightSum="1">

<ImageView
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="50dp"
    android:layout_height="wrap_content"
    android:src="@mipmap/ic_launch"/>

    <EditText
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:text=""
        android:textSize="26sp"
        android:textColor="#FFFFFF"
        android:hint="@string/telephoneHint"
        android:textColorHint="#969696"
        android:ems="11"
        android:maxLength="11"
        android:layout_marginTop="37dp"
        android:id="@+id/editText_telephone"
        />

    <EditText
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text=""
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:hint="@string/passwordHint"
        android:ems="20"
        android:textColorHint="#969696"
        android:maxLength="20"
        android:layout_marginTop="25dp"
        android:id="@+id/editText_password"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            style="@style/EditTextTheme"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:text=""
            android:textSize="26sp"
            android:textColor="#FFFFFF"
            android:hint="短信验证码"
            android:textColorHint="#969696"
            android:maxLength="6"
            android:layout_marginTop="25dp"
            android:id="@+id/editText_code"
            android:layout_weight="0.53" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/button_background"
            android:textColor="#FFFFFF"
            android:textStyle="italic"
            android:textSize="16dp"
            android:text="@string/Button_getCode_text"
            android:layout_alignBottom="@+id/editText_code"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/button_getCode"
            android:layout_weight="0.09" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:background="@drawable/button_background"
        android:textColor="#FFFFFF"
        android:textStyle="italic"
        android:textSize="30dp"
        android:text="@string/button_submit_text"
        android:id="@+id/button_login_submit"
        />


</LinearLayout>
